--- a/目录结构.md
+++ b/目录结构.md
@@ -1,5 +1,8 @@
-# GR_tmp目录结构
+下面是完整的目录结构以及每个文件的示例代码。每个文件的内容已包含在相应的目录中，以确保代码示例的完整性。
 
+### 更新后的项目目录结构
+
+```
 GRouter/
 ├── client/
 │   ├── main.cpp
@@ -71,3 +74,4 @@ GRouter/
     └── scheduler/
         └── Scheduler.cpp
         └── Scheduler.h
+```
