--- a/目录结构.md
+++ b/目录结构.md
@@ -34,7 +34,7 @@ GRouter/
 │   ├── scripts/
 │   └── shm-ipc/
 ├── conf/
-│   └── config.json
+│   └── config.yml
 ├── deploy/
 │   ├── kops/
 │   ├── yaml/
