--- a/目录结构.md
+++ b/目录结构.md
@@ -75,3 +75,80 @@ GRouter/
         └── Scheduler.cpp
         └── Scheduler.h
 ```
+
+以下是 `GRouter` 项目中每个目录的详细功能说明。
+
+### 1. `client/`
+**功能**: 包含 GRouter 客户端的实现。
+- **main.cpp**: 程序入口，负责初始化 GRouter 客户端并开始路由数据。
+- **GRouterClient.cpp**: 实现 GRouterClient 类，提供数据路由和任务调度功能。
+- **GRouterClient.h**: 定义 GRouterClient 类的接口。
+
+### 2. `common/`
+**功能**: 提供通用的工具、类和配置文件，以支持项目的不同模块。
+- **cmake/**: 包含 CMake 构建相关的脚本。
+  - **CodeCoverage.cmake**: 用于生成代码覆盖率报告的脚本。
+  - **DownloadProject.cmake**: 用于自动下载其他项目的 CMake 脚本。
+  - **DownloadProjectHelper.cmake**: 辅助下载项目的 CMake 脚本。
+  - **clang-format.cmake**: 用于代码格式化的 CMake 脚本。
+- **hydro-vendor/**: 包含第三方依赖项和库，提供项目所需的额外功能。
+- **include/**: 存放项目的头文件，包括各种模块的类定义。
+  - **coordinator/**: 包含与协调器相关的类，负责管理数据流和任务调度。
+  - **executor/**: 包含执行器相关的类，负责具体的数据传输和执行任务。
+  - **function_interface/**: 定义功能接口，为实现具体功能提供基类。
+  - **scheduler/**: 包含调度器类，负责调度任务和管理资源。
+- **proto/**: 存放 Protocol Buffers 文件。
+  - **anna.proto**: 定义与 Anna 相关的消息格式。
+  - **common.proto**: 定义通用消息格式。
+  - **kvs.proto**: 定义与键值存储相关的消息格式。
+  - **operation.proto**: 定义操作相关的消息格式。
+- **scripts/**: 存放各种脚本工具，用于项目管理和维护。
+- **shm-ipc/**: 提供共享内存和进程间通信的相关实现。
+
+### 3. `conf/`
+**功能**: 存放项目的配置文件。
+- **config.yml**: 使用 YAML 格式的配置文件，包含服务器和客户端的配置信息，例如主机、端口和超时设置。
+
+### 4. `deploy/`
+**功能**: 包含部署相关的文件和脚本。
+- **kops/**: 存放 Kubernetes 相关的操作文件，管理集群部署。
+- **yaml/**: 存放 YAML 格式的配置文件，通常用于 Kubernetes 资源的定义。
+- **add_nodes.py**: 脚本，用于向集群添加节点。
+- **create_cluster.py**: 脚本，用于创建新的集群。
+- **gen_function_ds.py**: 脚本，用于生成函数数据存储。
+- **manual_update.py**: 脚本，用于对集群进行手动更新。
+- **remove_node.py**: 脚本，用于从集群中移除节点。
+- **util.py**: 实用工具脚本，包含一些通用的功能。
+
+### 5. `dockerfiles/`
+**功能**: 存放 Docker 相关文件，用于构建和运行项目的 Docker 镜像。
+- **base.dockerfile**: 基础 Dockerfile，定义了项目所需的基本环境。
+- **grouter.dockerfile**: 定义 GRouter 的 Docker 镜像构建过程，包括复制源代码和构建应用。
+- **start-grouter.sh**: 启动 GRouter 的脚本，包含运行时命令。
+
+### 6. `examples/cpp/`
+**功能**: 存放 C++ 示例代码，演示如何使用 GRouter。
+- **example_usage.cpp**: 示例程序，展示了如何初始化 GRouter 客户端、路由数据和调度传输的基本用法。
+
+### 7. `include/`
+**功能**: 头文件存放目录，提供各个模块的接口定义。
+- **coordinator/**: 包含协调器类的头文件。
+- **executor/**: 包含执行器类的头文件。
+- **function_interface/**: 包含功能接口的头文件。
+- **scheduler/**: 包含调度器类的头文件。
+
+### 8. `scripts/`
+**功能**: 存放各种脚本文件，支持自动化和测试。
+- **run_tests.sh**: 脚本，用于编译和运行测试程序，确保各个模块正常工作。
+
+### 9. `src/`
+**功能**: 包含项目的源代码，具体实现各个模块的功能。
+- **client/**: 实现 GRouterClient 相关的代码。
+- **coordinator/**: 实现 Coordinator 类的功能，负责数据路由和管理。
+- **executor/**: 实现 Executor 类的功能，负责具体的数据执行和传输。
+- **manager/**: (未在前面的示例中提供具体代码) 可能用于管理资源和调度任务。
+- **scheduler/**: 实现 Scheduler 类的功能，负责任务的调度。
+
+### 总结
+
+以上是对 `GRouter` 项目中每个目录及其功能的详细说明。
